--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -33,6 +33,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "event-store-adapter-js": "2.0.15-snapshot.2",
     "ulidx": "^2.3.0"
   }
 }
