--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "domain",
+  "name": "cqrs-es-example-js-domain",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc && rm -f dist/internal/*.test.d.ts && rm -f dist/internal/*.test.js && rm -fr dist/internal/test",
     "test": "jest --no-cache",
