--- a/packages/interface-adaptor/package.json
+++ b/packages/interface-adaptor/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "interface-adapter",
+  "name": "cqrs-es-example-js-interface-adapter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc && rm -f dist/internal/*.test.d.ts && rm -f dist/internal/*.test.js && rm -fr dist/internal/test",
     "test": "jest --no-cache",
@@ -34,6 +35,6 @@
   },
   "dependencies": {
     "event-store-adapter-js": "2.0.15-snapshot.2",
-    "domain": "workspace:*"
+    "cqrs-es-example-js-domain": "workspace:*"
   }
 }
