--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -34,7 +34,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "event-store-adapter-js": "2.0.16",
+    "event-store-adapter-js": "2.0.18-snapshot.2",
     "fp-ts": "^2.16.2",
     "ulidx": "^2.3.0"
   }
