--- a/packages/interface-adaptor/package.json
+++ b/packages/interface-adaptor/package.json
@@ -34,7 +34,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "event-store-adapter-js": "2.0.16",
+    "event-store-adapter-js": "2.0.18-snapshot.2",
     "cqrs-es-example-js-domain": "workspace:*",
     "@aws-sdk/client-dynamodb": "^3.413.0",
     "aws-sdk": "^2.1459.0",
