--- a/packages/command/use-case/package.json
+++ b/packages/command/use-case/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "event-store-adapter-js": "2.0.18-snapshot.2",
+    "cqrs-es-example-js-command-domain": "workspace:*",
     "fp-ts": "^2.16.2",
     "ulidx": "^2.3.0"
   }
