--- a/packages/command/interface-adaptor-if/package.json
+++ b/packages/command/interface-adaptor-if/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cqrs-es-example-js-bootstrap",
+  "name": "cqrs-es-example-js-command-interface-adaptor-if",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -28,13 +28,13 @@
     "jest": "^29.7.0",
     "prettier": "3.2.2",
     "rimraf": "^5.0.1",
+    "testcontainers": "^10.2.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "event-store-adapter-js": "2.0.18-snapshot.2",
-    "cqrs-es-example-js-command-interface-adaptor-impl": "workspace:*",
     "cqrs-es-example-js-command-domain": "workspace:*",
     "@aws-sdk/client-dynamodb": "^3.413.0",
     "aws-sdk": "^2.1459.0",
