--- a/packages/bootstrap/package.json
+++ b/packages/bootstrap/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "build": "tsc && rm -f dist/internal/*.test.d.ts && rm -f dist/internal/*.test.js && rm -fr dist/internal/test",
     "test": "jest --no-cache",
     "fix": "npm run fix:prettier && npm run fix:eslint",
@@ -22,6 +23,7 @@
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.0",
     "@types/winston": "^2.4.4",
+    "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.47.0",
@@ -33,14 +35,15 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "hono": "^4.0.4",
-    "event-store-adapter-js": "2.0.18-snapshot.2",
-    "cqrs-es-example-js-command-interface-adaptor-impl": "workspace:*",
-    "cqrs-es-example-js-command-use-case": "workspace:*",
-    "cqrs-es-example-js-command-domain": "workspace:*",
     "@aws-sdk/client-dynamodb": "^3.413.0",
     "aws-sdk": "^2.1459.0",
+    "cqrs-es-example-js-command-domain": "workspace:*",
+    "cqrs-es-example-js-command-interface-adaptor-impl": "workspace:*",
+    "cqrs-es-example-js-command-use-case": "workspace:*",
+    "event-store-adapter-js": "2.0.18-snapshot.2",
+    "fp-ts": "^2.16.2",
+    "hono": "^4.0.4",
     "moment": "^2.29.4",
-    "fp-ts": "^2.16.2"
+    "yargs": "^17.7.2"
   }
 }
