--- a/packages/query/interface-adaptor/package.json
+++ b/packages/query/interface-adaptor/package.json
@@ -34,10 +34,12 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "event-store-adapter-js": "2.0.18-snapshot.2",
     "@aws-sdk/client-dynamodb": "^3.413.0",
     "aws-sdk": "^2.1459.0",
-    "moment": "^2.29.4",
-    "fp-ts": "^2.16.2"
+    "event-store-adapter-js": "2.0.18-snapshot.2",
+    "fp-ts": "^2.16.2",
+    "graphql": "^16.8.1",
+    "graphql-yoga": "^5.1.1",
+    "moment": "^2.29.4"
   }
 }
