--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
           node-version: 20.x
           cache: pnpm
           cache-dependency-path: pnpm-lock.yaml
+      - run: pnpm install -g turbo    
       - run: pnpm install --frozen-lockfile
       - run: pnpm run lint
   test:
@@ -39,5 +40,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: pnpm
           cache-dependency-path: pnpm-lock.yaml
+      - run: pnpm install -g turbo 
       - run: pnpm install --frozen-lockfile
       - run: pnpm run test
