--- a/packages/rmu/package.json
+++ b/packages/rmu/package.json
@@ -27,6 +27,7 @@
     "eslint": "^8.47.0",
     "jest": "^29.7.0",
     "prettier": "3.2.2",
+    "prisma": "^5.10.1",
     "rimraf": "^5.0.1",
     "testcontainers": "^10.2.1",
     "ts-jest": "^29.1.1",
@@ -34,11 +35,12 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.413.0",
+    "@prisma/client": "^5.10.1",
+    "aws-sdk": "^2.1459.0",
     "cqrs-es-example-js-command-domain": "workspace:*",
     "event-store-adapter-js": "2.0.18-snapshot.2",
-    "@aws-sdk/client-dynamodb": "^3.413.0",
-    "aws-sdk": "^2.1459.0",
-    "moment": "^2.29.4",
-    "fp-ts": "^2.16.2"
+    "fp-ts": "^2.16.2",
+    "moment": "^2.29.4"
   }
 }
