--- a/packages/query/interface-adaptor/package.json
+++ b/packages/query/interface-adaptor/package.json
@@ -34,6 +34,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.1",
     "@aws-sdk/client-dynamodb": "^3.413.0",
     "aws-sdk": "^2.1459.0",
     "event-store-adapter-js": "2.0.18-snapshot.2",
