--- a/packages/rmu/package.json
+++ b/packages/rmu/package.json
@@ -19,6 +19,7 @@
   "author": "Junichi Kato <j5ik2o@gmail.com> (https://j5ik2o.me/)",
   "license": "MIT",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.134",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.0",
     "@types/winston": "^2.4.4",
@@ -37,6 +38,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.413.0",
     "@prisma/client": "^5.10.1",
+    "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1459.0",
     "cqrs-es-example-js-command-domain": "workspace:*",
     "event-store-adapter-js": "2.0.18-snapshot.2",
