--- a/packages/rmu/package.json
+++ b/packages/rmu/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "prisma:generate": "prisma generate",
     "build": "tsc && rm -f dist/internal/*.test.d.ts && rm -f dist/internal/*.test.js && rm -fr dist/internal/test",
     "test": "jest --no-cache",
     "fix": "npm run fix:prettier && npm run fix:eslint",
