--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,9 @@ jobs:
           node-version: 20.x
           cache: pnpm
           cache-dependency-path: pnpm-lock.yaml
-      - run: pnpm install -g turbo    
+      - run: pnpm install -g turbo
       - run: pnpm install --frozen-lockfile
+      - run: pnpm prisma:generate
       - run: pnpm run lint
   test:
     runs-on: ubuntu-latest
@@ -40,6 +41,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: pnpm
           cache-dependency-path: pnpm-lock.yaml
-      - run: pnpm install -g turbo 
+      - run: pnpm install -g turbo
       - run: pnpm install --frozen-lockfile
+      - run: pnpm prisma:generate
       - run: pnpm run test
