--- a/packages/query/interface-adaptor/package.json
+++ b/packages/query/interface-adaptor/package.json
@@ -27,15 +27,17 @@
     "eslint": "^8.47.0",
     "jest": "^29.7.0",
     "prettier": "3.2.5",
+    "prisma": "^5.10.1",
     "rimraf": "^5.0.1",
     "testcontainers": "^10.2.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "typegraphql-prisma": "^0.27.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.1",
     "@aws-sdk/client-dynamodb": "^3.413.0",
+    "@prisma/client": "^5.10.1",
     "aws-sdk": "^2.1459.0",
     "event-store-adapter-js": "2.0.19",
     "fp-ts": "^2.16.2",
