--- a/packages/bootstrap/package.json
+++ b/packages/bootstrap/package.json
@@ -21,6 +21,7 @@
   "author": "Junichi Kato <j5ik2o@gmail.com> (https://j5ik2o.me/)",
   "license": "MIT",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.134",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.0",
     "@types/winston": "^2.4.4",
@@ -36,12 +37,16 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "aws-lambda": "^1.0.7",
     "@aws-sdk/client-dynamodb": "^3.413.0",
+    "@aws-sdk/client-dynamodb-streams": "^3.413.0",
     "@hono/node-server": "^1.8.1",
+    "@prisma/client": "^5.10.1",
     "aws-sdk": "^2.1459.0",
     "cqrs-es-example-js-command-domain": "workspace:*",
     "cqrs-es-example-js-command-interface-adaptor-impl": "workspace:*",
     "cqrs-es-example-js-command-use-case": "workspace:*",
+    "cqrs-es-example-js-rmu": "workspace:*",
     "event-store-adapter-js": "2.0.19",
     "fp-ts": "^2.16.2",
     "hono": "^4.0.4",
