--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:eslint": "turbo lint:eslint",
     "lint:prettier": "turbo lint:prettier",
     "clean": "turbo clean",
-    "prisma:generate": "pnpm --filter \"cqrs-es-example-js-rmu\" prisma:generate"
+    "prisma:generate": "pnpm --filter \"cqrs-es-example-js-rmu\" --filter \"cqrs-es-example-js-query-interface-adaptor\" prisma:generate"
   },
   "keywords": [],
   "author": "Junichi Kato <j5ik2o@gmail.com> (https://j5ik2o.me/)",
