--- a/packages/query/interface-adaptor/package.json
+++ b/packages/query/interface-adaptor/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "prisma:generate": "prisma generate",
     "build": "tsc && rm -f dist/internal/*.test.d.ts && rm -f dist/internal/*.test.js && rm -fr dist/internal/test",
     "test": "jest --no-cache",
     "fix": "npm run fix:prettier && npm run fix:eslint",
@@ -38,11 +39,16 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.413.0",
     "@prisma/client": "^5.10.1",
+    "@types/graphql-fields": "^1.3.9",
     "aws-sdk": "^2.1459.0",
     "event-store-adapter-js": "2.0.21",
     "fp-ts": "^2.16.2",
     "graphql": "^16.8.1",
-    "graphql-yoga": "^5.1.1",
-    "moment": "^2.29.4"
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.22.4",
+    "moment": "^2.29.4",
+    "reflect-metadata": "^0.2.1",
+    "tslib": "^2.6.2",
+    "type-graphql": "2.0.0-beta.1"
   }
 }
