--- a/tools/docker-compose/docker-compose-applications.yml
+++ b/tools/docker-compose/docker-compose-applications.yml
@@ -52,24 +52,24 @@ services:
       - localstack
       - dynamodb-admin
       - dynamodb-setup
-    # restart: on-failure
-#  read-api-server-1:
-#    build:
-#      context: ../../
-#      dockerfile: Dockerfile
-#    command: [ "readApi" ]
-#    image: read-api-server:latest-${ARCH}
-#    container_name: read-api-server-1
-#    ports:
-#      - 38082:8080
-#    environment:
-#      AWS_REGION: ${AWS_REGION}
-#      API_HOST: "0.0.0.0"
-#      API_PORT: 8080
-#      API_ALLOW_ORIGINS: "http://localhost:28080,http://localhost:18082,http://localhost:8888"
-#      DATABASE_URL: ceer:ceer@tcp(mysql-local:3306)/ceer
-#    depends_on:
-#      - mysql
-#      - migration
-#      - write-api-server-1
-#      - read-model-updater-1
+    restart: on-failure
+  read-api-server-1:
+    build:
+      context: ../../
+      dockerfile: Dockerfile
+    command: [ "readApi" ]
+    image: read-api-server:latest-${ARCH}
+    container_name: read-api-server-1
+    ports:
+      - 38082:8080
+    environment:
+      AWS_REGION: ${AWS_REGION}
+      API_HOST: "0.0.0.0"
+      API_PORT: 8080
+      API_ALLOW_ORIGINS: "http://localhost:28080,http://localhost:18082,http://localhost:8888"
+      DATABASE_URL: mysql://ceer:ceer@mysql-local:3306/ceer
+    depends_on:
+      - mysql
+      - migration
+      - write-api-server-1
+      - read-model-updater-1
