--- a/packages/bootstrap/package.json
+++ b/packages/bootstrap/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.134",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.0",
     "@types/winston": "^2.4.4",
@@ -49,10 +50,12 @@
     "cqrs-es-example-js-query-interface-adaptor": "workspace:*",
     "cqrs-es-example-js-rmu": "workspace:*",
     "event-store-adapter-js": "2.0.21",
+    "express": "^4.18.2",
     "fp-ts": "^2.16.2",
     "graphql-yoga": "^5.1.1",
     "hono": "^4.0.4",
     "moment": "^2.29.4",
+    "reflect-metadata": "^0.2.1",
     "tslog": "^4.9.2",
     "yargs": "^17.7.2"
   }
