--- a/packages/command/interface-adaptor-impl/package.json
+++ b/packages/command/interface-adaptor-impl/package.json
@@ -42,6 +42,11 @@
     "cqrs-es-example-js-command-use-case": "workspace:*",
     "event-store-adapter-js": "2.0.21",
     "fp-ts": "^2.16.2",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "graphql": "^16.8.1",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.22.4",
+    "tslib": "^2.6.2",
+    "type-graphql": "2.0.0-beta.1"
   }
 }
