--- a/packages/query/interface-adaptor/package.json
+++ b/packages/query/interface-adaptor/package.json
@@ -48,6 +48,7 @@
     "graphql-scalars": "^1.22.4",
     "moment": "^2.29.4",
     "tslib": "^2.6.2",
-    "type-graphql": "2.0.0-beta.6"
+    "type-graphql": "2.0.0-beta.6",
+    "tslog": "^4.9.2"
   }
 }
