--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
   },
   "keywords": [],
   "author": "Junichi Kato <j5ik2o@gmail.com> (https://j5ik2o.me/)",
-  "license": "MIT"
+  "license": "(MIT OR Apache-2.0)",
+  "engines": {
+    "node": ">=20.5.0",
+    "pnpm": ">=8.15.4",
+    "npm": "please-use-pnpm",
+    "yarn": "please-use-pnpm"
+  },
+  "packageManager": "pnpm@8.15.4"
 }
