--- a/packages/bootstrap/package.json
+++ b/packages/bootstrap/package.json
@@ -54,5 +54,12 @@
     "reflect-metadata": "^0.2.1",
     "tslog": "^4.9.2",
     "yargs": "^17.7.2"
-  }
+  },
+  "engines": {
+    "node": ">=20.5.0",
+    "pnpm": ">=8",
+    "npm": "please-use-pnpm",
+    "yarn": "please-use-pnpm"
+  },
+  "packageManager": "pnpm@8.6.12"
 }
