--- a/packages/command/domain/package.json
+++ b/packages/command/domain/package.json
@@ -37,5 +37,12 @@
     "event-store-adapter-js": "2.1.2",
     "fp-ts": "^2.16.2",
     "ulidx": "^2.3.0"
-  }
+  },
+  "engines": {
+    "node": ">=20.5.0",
+    "pnpm": ">=8",
+    "npm": "please-use-pnpm",
+    "yarn": "please-use-pnpm"
+  },
+  "packageManager": "pnpm@8.6.12"
 }
