--- a/packages/command/interface-adaptor-if/package.json
+++ b/packages/command/interface-adaptor-if/package.json
@@ -40,5 +40,12 @@
     "aws-sdk": "^2.1459.0",
     "moment": "^2.29.4",
     "fp-ts": "^2.16.2"
-  }
+  },
+  "engines": {
+    "node": ">=20.5.0",
+    "pnpm": ">=8",
+    "npm": "please-use-pnpm",
+    "yarn": "please-use-pnpm"
+  },
+  "packageManager": "pnpm@8.6.12"
 }
