--- a/packages/command/use-case/package.json
+++ b/packages/command/use-case/package.json
@@ -40,5 +40,12 @@
     "fp-ts": "^2.16.2",
     "ulidx": "^2.3.0",
     "tslog": "^4.9.2"
-  }
+  },
+  "engines": {
+    "node": ">=20.5.0",
+    "pnpm": ">=8",
+    "npm": "please-use-pnpm",
+    "yarn": "please-use-pnpm"
+  },
+  "packageManager": "pnpm@8.6.12"
 }
