--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,7 @@ jobs:
           node-version: 20.x
           cache: pnpm
           cache-dependency-path: pnpm-lock.yaml
-      - run: pnpm install -g turbo
-      - run: pnpm install --frozen-lockfile
+      - run: pnpm install
       - run: pnpm prisma:generate
       - run: pnpm run lint
   test:
@@ -42,7 +41,6 @@ jobs:
           cache: pnpm
           cache-dependency-path: pnpm-lock.yaml
       - run: |
-          pnpm install -g turbo
           pnpm install
           pnpm prisma:generate
           pnpm run test
