--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "npm": "please-use-pnpm",
     "yarn": "please-use-pnpm"
   },
-  "packageManager": "pnpm@8.6.12"
+  "packageManager": "pnpm@8.6.12",
+  "devDependencies": {
+    "turbo": "^1.12.4"
+  }
 }
