fix: ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,10 @@ jobs:
           node-version: 20.x
           cache: pnpm
           cache-dependency-path: pnpm-lock.yaml
-      - run: pnpm install
-      - run: pnpm prisma:generate
-      - run: pnpm run lint
+      - run: |
+          pnpm install
+          pnpm prisma:generate
+          pnpm run lint
   test:
     runs-on: ubuntu-latest
     needs: lint
