--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "cqrs-es-example-js-command-domain",
+  "name": "cqrs-es-example-js-infrastructure",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "start": "ts-node src/index.ts",
+    "start-write-api": "node dist/index.js writeApi",
     "build": "tsc && rm -f dist/internal/*.test.d.ts && rm -f dist/internal/*.test.js && rm -fr dist/internal/test",
     "test": "jest --no-cache",
     "fix": "npm run fix:prettier && npm run fix:eslint",
@@ -28,15 +30,14 @@
     "jest": "^29.7.0",
     "prettier": "3.2.5",
     "rimraf": "^5.0.1",
-    "testcontainers": "^10.2.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "cqrs-es-example-js-infrastructure": "workspace:*",
-    "event-store-adapter-js": "2.1.4",
     "fp-ts": "^2.16.2",
+    "moment": "^2.29.4",
+    "tslog": "^4.9.2",
     "ulidx": "^2.3.0"
   },
   "engines": {
