--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "docker-build": "docker build -t cqrs-es-example-js .",
     "docker-compose-e2e-test": "./tools/scripts/docker-compose-e2e-test.sh",
     "docker-compose-up": "./tools/scripts/docker-compose-up.sh",
+    "docker-compose-up-db": "./tools/scripts/docker-compose-up.sh -d",
     "docker-compose-down": "./tools/scripts/docker-compose-down.sh",
     "create-group-chat": "./tools/scripts/curl-create-group-chat.sh",
     "verify-group-chat": "./tools/e2e-test/verify-group-chat.sh",
