add support for biome

--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
     "verify-group-chat": "./tools/e2e-test/verify-group-chat.sh",
     "build": "turbo build",
     "test": "turbo test",
-    "fix": "turbo fix",
-    "fix:eslint": "turbo fix:eslint",
-    "fix:prettier": "turbo fix:prettier",
-    "lint": "turbo lint",
-    "lint:eslint": "turbo lint:eslint",
-    "lint:prettier": "turbo lint:prettier",
+    "lint": "turbo lint --concurrency=1",
+    "lint:fix": "turbo lint:fix",
+    "format": "turbo format",
+    "format:fix": "turbo format:fix",
     "clean": "turbo clean",
     "prisma:generate": "pnpm --filter \"cqrs-es-example-js-rmu\" --filter \"cqrs-es-example-js-query-interface-adaptor\" prisma:generate"
   },
