--- a/packages/bootstrap/package.json
+++ b/packages/bootstrap/package.json
@@ -2,25 +2,23 @@
   "name": "cqrs-es-example-js-bootstrap",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
     "start-write-api": "node dist/index.js writeApi",
     "build": "tsc && rm -f dist/internal/*.test.d.ts && rm -f dist/internal/*.test.js && rm -fr dist/internal/test",
     "test": "jest --no-cache",
-    "fix": "npm run fix:prettier && npm run fix:eslint",
-    "fix:eslint": "eslint --fix .",
-    "fix:prettier": "prettier --write \"**/*.{js,ts,jsx,tsx,json}\"",
-    "lint": "npm run lint:prettier && npm run lint:eslint",
-    "lint:eslint": "eslint .",
-    "lint:prettier": "prettier --check \"**/*.{js,ts,jsx,tsx,json}\"",
+    "lint": "biome check ./src",
+    "lint:fix": "biome check --write ./src",
+    "format": "biome format ./src",
+    "format:fix": "biome format --write ./src",
     "clean": "rimraf ./dist"
   },
   "keywords": [],
   "author": "Junichi Kato <j5ik2o@gmail.com> (https://j5ik2o.me/)",
   "license": "MIT",
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@types/aws-lambda": "^8.10.134",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.0",
@@ -28,9 +26,7 @@
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^8.47.0",
     "jest": "^29.7.0",
-    "prettier": "3.3.3",
     "rimraf": "^6.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
