--- a/packages/command/interface-adaptor-if/package.json
+++ b/packages/command/interface-adaptor-if/package.json
@@ -2,31 +2,25 @@
   "name": "cqrs-es-example-js-command-interface-adaptor-if",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
   "scripts": {
     "build": "tsc && rm -f dist/internal/*.test.d.ts && rm -f dist/internal/*.test.js && rm -fr dist/internal/test",
     "test": "jest --no-cache",
-    "fix": "npm run fix:prettier && npm run fix:eslint",
-    "fix:eslint": "eslint --fix .",
-    "fix:prettier": "prettier --write \"**/*.{js,ts,jsx,tsx,json}\"",
-    "lint": "npm run lint:prettier && npm run lint:eslint",
-    "lint:eslint": "eslint .",
-    "lint:prettier": "prettier --check \"**/*.{js,ts,jsx,tsx,json}\"",
+    "lint": "biome check ./src",
+    "fix": "biome format --write ./src",
     "clean": "rimraf ./dist"
   },
   "keywords": [],
   "author": "Junichi Kato <j5ik2o@gmail.com> (https://j5ik2o.me/)",
   "license": "MIT",
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.0",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^8.47.0",
     "jest": "^29.7.0",
-    "prettier": "3.3.3",
     "rimraf": "^6.0.0",
     "testcontainers": "^10.2.1",
     "ts-jest": "^29.1.1",
