--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,9 @@
       "inputs": ["src/**/*.tsx", "src/**/*.ts", "test/**/*.ts", "test/**/*.tsx"]
     },
     "lint": {},
-    "fix": {},
+    "lint:fix": {},
+    "format": {},
+    "format:fix": {},
     "clean": {},
     "dev": {
       "cache": false,
