refactor: Update build scripts to use rimraf

--- a/packages/bootstrap/package.json
+++ b/packages/bootstrap/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "start-write-api": "node dist/index.js writeApi",
-    "build": "tsc && rm -f dist/internal/*.test.d.ts && rm -f dist/internal/*.test.js && rm -fr dist/internal/test",
+    "build": "tsc && rimraf dist/internal/*.test.d.ts && rimraf dist/internal/*.test.js && rimraf dist/internal/test && rimraf dist/*.test.*",
     "test": "jest --no-cache",
     "lint": "biome check ./src",
     "lint:fix": "biome check --write ./src",
