--- a/packages/rmu/package.json
+++ b/packages/rmu/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "prisma:generate": "prisma generate",
-    "build": "tsc && rm -f dist/internal/*.test.d.ts && rm -f dist/internal/*.test.js && rm -fr dist/internal/test",
+    "build": "tsc && rimraf dist/internal/*.test.d.ts && rimraf dist/internal/*.test.js && rimraf dist/internal/test && rimraf dist/*.test.*",
     "test": "jest --no-cache",
     "lint": "biome check ./src",
     "lint:fix": "biome check --write ./src",
