--- a/.github/workflows/openai-review.yml
+++ b/.github/workflows/openai-review.yml
@@ -15,7 +15,7 @@ concurrency:
   cancel-in-progress: ${{ github.event_name != 'pull_request_review_comment' }}
 jobs:
   review:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 15
     if: "!contains(github.event.pull_request.labels.*.name, 'renovate')"
     steps:
